--- a/SecondP.html
+++ b/SecondP.html
@@ -1,45 +1,41 @@
-<!DOCTYPe html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Second Page</title>
-        <link rel="stylesheet" href="css/name.css">
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Second Page</title>
+    <link rel="stylesheet" href="css/secondPageCss.css">
+</head>
 
-        <table width="100%" border="0" cellpadding="10" cellspacing="0">
-            <tr>
-                <!-- Left column: menu (18% width) -->
-                <td width="18%" valign="top">
-                    <h2>Second Page</h2>
-                    <ul>
-                        <li><a href="Main.html">First Page</a></li>
-                    </ul>
-                </td>
+<body>
 
-
-                <!-- Right column: main content (remaining width) -->
-                <td valign="top">
-                    <h1 id="home">Welcome</h1>
-                    <img src="images/qwerty.jpg" width="200px" height="150px" title="Spit" alt="QWERTY"><!--title shows a tooltip text on hover | if site can not download a image alt will represent it by word -->
-                    <br>
-                    <button type="submit">click me!</button>
-
-                    <p>Email: <a href="mailto:eskender5488@gmail.com">eskender5488@gmail.com</a></p> <!-- mailto opens the default email client to send a message -->
-                </td>
-            </tr>
-        </table>
+    <header class = "second-page-site-header">
+        <h1 class = "page-title">Second Page</h1>
+        <nav class ="header-nav">
+            <ul>
+                <li><a href="Main.html">First Page</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
-        <!-- Footer row that spans both columns -->
-        <table width="100%" border="0" cellpadding="10" cellspacing="0">
-            <tr>
-                <td align="center">
-                    <small style="font-size: 10px;" >Scebob</small>
-                </td>
-            </tr>
-        </table>
+    <main class = "second-page-main-content">
+        <section class = "welcome-section">
+            <h2>Welcome</h2>
+            <figure class = "second-page-image">
+                <figcaption class= "image-captions">QWERTY image</figcaption>
+                <img class="spit-image " src="images/qwerty.jpg" width="200" height="150" title="Spit" alt="QWERTY">
+            </figure>
+            <button class="click-me-button" type="button">Click me!</button>
 
-    </body>
+            <p class = "contact-me-mail">Email: <a href="mailto:eskender5488@gmail.com">eskender5488@gmail.com</a></p>
+        </section>
+    </main>
+
+
+    <footer class ="second-page-footer">
+        <small class = "second-page-footer-text">&copy;  Scebob</small>
+     </footer>
+
+</body>
 </html>
