--- a/Main.html
+++ b/Main.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <div id = "page" class = "page">
+        <div id = "page" >
             <header class = "site-headersection">
                 <a name="topOfPage"></a> <!-- Link for top of the page -->
                 <div class="header-container">
@@ -51,7 +51,7 @@
                 </nav>
 
                 <main class="main-content">  
-                    <div id = "myhobbis" class="my-hobbies">
+                    <div id = "myhobbies" >
 
                         <h2>My hobbies:</h2>
                         <ol class="hobby-list">
