--- a/SecondP.html
+++ b/SecondP.html
@@ -20,16 +20,30 @@
 
 
         <main class = "second-page-main-content">
-            <section class = "welcome-section">
-                <h2>Welcome</h2>
-                <figure class = "second-page-image">
-                    <figcaption class= "image-captions">QWERTY image</figcaption>
-                    <img class="spit-image " src="images/qwerty.jpg" width="200" height="150" title="Spit" alt="QWERTY">
-                </figure>
-                <button class="click-me-button" type="button">Click me!</button>
 
-                <p class = "contact-me-mail">Email: <a href="mailto:eskender5488@gmail.com">eskender5488@gmail.com</a></p>
+            <div class="grid-layout">
+                <header class="grid-header">Header</header>
+                <aside class="grid-sidebar">Sidebar</aside>
+                <main class="grid-main">Main Content</main>
+                <footer class="grid-footer">Footer</footer>
+            </div>
+
+            <h2 > gallery</h2>
+
+            <section class="gallery">
+                <img src="images/dumaite.png" alt="qwwq">
+                <img src="images/fff.png" alt="qwwq">
+                <img src="images/nice.png" alt="qwwq">
+                <img src="images/opa.jpg" alt="qwwq">
+                <img src="images/pilot.jpg" alt="qwwq">
+                <img src="images/qwerty.jpg" alt="qwwq">
+                <img src="images/refused.jpg" alt="qwwq">
+                <img src="images/skibidi.png" alt="qwwq">
+                <img src="images/FREe.gif" alt="qwwq">
+
             </section>
+
+
         </main>
 
 
