--- a/Main.html
+++ b/Main.html
@@ -105,7 +105,7 @@
                             <div class="project-card">
                                 <h3>Telegram bot</h3>
                                 <p>First python telegram bot</p>
-                                <a href="https://github.com/Heb1ks/Bot" target="_blank">
+                                <a href="https://github.com/Heb1ks/Komekshi-KomekshiTestground" target="_blank">
                                     <button>Github</button>
                                 </a>
                             </div>
