--- a/SecondP.html
+++ b/SecondP.html
@@ -13,7 +13,7 @@
             <h1 class = "page-title">Second Page</h1>
             <nav class ="header-nav">
                 <ul>
-                    <li><a href="heb1ks.github.io">First Page</a></li>
+                    <li><a href="index.html">First Page</a></li>
                 </ul>
             </nav>
         </header>
